kanc_pamoi/src/tests/sample_code/should_succeed/single_file/with_warnings/check/nf_no_goal_exists.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let no_goal_exists = check (goal = Nat) {
    Nat.o
};

let no_goal_exists_question = check (goal = ?) {
    Nat.o
};
