kanc_pamoi/src/tests/sample_code/should_fail/single_file/type_check/illegal_callee/non_nullary_adt_instance.k
type U {
    u: U,
}

type Bar {
    b(x: U): Bar,
}

let foo = Bar.b(U.u)(U.u);
